<resources>
    <string name="app_name">ScoutBadgeTrackerApp</string>
    <string name="logIn">Log In</string>
    <string name="badges">Badges</string>
    <string name="groups">Groups</string>
    <string name="selectedBadges">Selected Badges</string>
    <string name="upload">Upload Evidence</string>
    <string name="signUp">Sign Up</string>
    <string name="scoutBadges">Scout Badges</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="viewEvidence">View Evidence</string>
    <string name="complete">Complete</string>
    <string name="back">Back</string>
    <string name="calendarBack"><![CDATA[<-]]></string>
    <string name="calendarForward"><![CDATA[->]]></string>
    <string name="editEvent">Edit Event</string>
    <string name="archived">Archived</string>
    <string name="noEvents">No Events</string>
    <string name="update">Update</string>
    <string name="awardBadge">Award Badge</string>
    <string name="waitingApproval">You are currently waiting for approval.</string>
    <string name="deniedApproval">You have been denied from joining.</string>
    <string name="speakLeader">Please speak with a leader at the group to be added.</string>
    <string name="speakLeader2">If you believe this to be wrong speak to a leader at the group.</string>
    <string name="noUnapproved">No Unapproved Evidence</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="showEvidence">Show Evidence</string>
    <string name="username2">Username:</string>
    <string name="password2">Password:</string>
    <string name="name2">Name:</string>
    <string name="dob2">Date of Brith:</string>
    <string name="email2">Email:</string>
    <string name="phone2">Phone Number:</string>
    <string name="role2">Role:</string>
    <string name="group2">Group:</string>
    <string name="joinDate">Group Join Date:</string>
    <string name="updateDetails">Update Details</string>
    <string name="deleteUser">Delete User</string>
    <string name="reqs">Requirements:</string>
    <string name="event">Events</string>
    <string name="userAccount">User Account</string>
    <string name="badgeOverview">Badge Progress Overview:</string>
    <string name="completed">Completed</string>
    <string name="inProgress">In Progress</string>
    <string name="notStarted">Not Started</string>
    <string name="Title">Scout Badge Tracker</string>
    <string name="leaders">Leaders</string>
    <string name="editLeaders">Edit Leaders</string>
    <string name="members">Members</string>
    <string name="parentsGuardians">Parents/Guardians</string>
    <string name="editMembers">Edit Members</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="selectEvidence">Select Evidence</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="newEvent">New Event</string>
    <string name="eventName">Event Name</string>
    <string name="eventName2">Event Name:</string>
    <string name="location">Location</string>
    <string name="location2">Location:</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startDate2">Start Date:</string>
    <string name="endDate2">End Date:</string>
    <string name="addEvent">Add Event</string>
    <string name="delete">Delete</string>

    <!--    String Arrays -->
<!--    Badge Types -->
    <string-array name="badgeTypes">
        <item>All Badges</item>
        <item>Activity</item>
        <item>Challenge</item>
        <item>Core</item>
        <item>Staged</item>
        <item>External</item>
    </string-array>
<!--    Roles -->
    <string-array name="userRoles">
        <item>Select a Role</item>
        <item>Scout</item>
        <item>Leader</item>
        <item>Parent/Guardian</item>
    </string-array>
<!--   Patrol Position -->
    <string-array name="scoutPosition">
        <item>Patrol Member</item>
        <item>Assistant Patrol Leader</item>
        <item>Patrol Leader</item>
        <item>Senior Patrol Leader</item>
    </string-array>
</resources>