<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:weightSum="2"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="12"
    android:background="@color/Scout_purple">
    <Button
        android:id="@+id/btnAccountBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/username2"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <TextView
        android:id="@+id/txtUsername2"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="25dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/password2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <EditText
        android:id="@+id/etxtPassword2"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:ems="10"
        android:inputType="text"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/name2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <TextView
        android:id="@+id/txtName2"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtDOB"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/dob2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <TextView
        android:id="@+id/txtDOB2"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/email2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <EditText
        android:id="@+id/etxtEmail2"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:ems="10"
        android:inputType="text"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/txtPhoneNum"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/phone2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <EditText
        android:id="@+id/etxtPhone2"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:ems="10"
        android:inputType="text"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/txtRole"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="7"
        android:layout_column="0"
        android:text="@string/role2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <TextView
        android:id="@+id/txtRole2"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtGroup"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="8"
        android:layout_column="0"
        android:text="@string/group2"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <Spinner
        android:id="@+id/spnGroup2"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:textSize="25dp"
        android:singleLine="false"
        android:gravity="start|top"/>

    <TextView
        android:id="@+id/txtGroupJoin"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_row="9"
        android:layout_column="0"
        android:text="@string/joinDate"
        android:textColor="@color/white"
        android:paddingLeft="5dp"/>
    <TextView
        android:id="@+id/txtGroupJoinDate"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="1"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnUpdateDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/updateDetails"
        android:layout_column="0"
        android:layout_row="10"
        android:layout_columnSpan="2"/>
    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/deleteUser"
        android:layout_column="0"
        android:layout_row="11"
        android:layout_columnSpan="2"/>

</GridLayout>