<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Scout_purple">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="40dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/membership_award" />

    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="19dp"
        android:enabled="false"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/logIn" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signUp" />

</LinearLayout>